examples/resolver/primitives/pass/alloc_and_free_flow.axo
const ptr = alloc(16)
free(ptr, 16)
print("freed")
