examples/resolver/primitives/fail/free_arity.axo
const ptr = alloc(8)
free(ptr)
